# zenix

./: .gitignore  pyproject.toml
zenix/src/: zenix.py
zenix/src/cli/: cli.py  format.py
zenix/src/utils/: display.py
